--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/login_empresa.css">
   <link rel="stylesheet" href="../css/general.css">
+  <!-- To insert the icon: -->
+  <link type="text/css" rel="stylesheet" href="../font-awesome/css/font-awesome.css" />
 
 </head>
 
@@ -35,22 +37,6 @@
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Nose <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">Nose</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">One more separated link</a></li>
-                    </ul>
-                  </li>
-                </ul>
                 <!--
                 <form class="navbar-form navbar-left">
                   <div class="form-group">
@@ -60,16 +46,17 @@
                 </form>
               -->
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="login_cliente.html">Particular</a></li>
-                  <li><a href="login_empresa.html">Empresa</a></li>
+                  <!-- <li><a href="login_cliente.html">Particular</a></li>
+                  <li><a href="login_empresa.html">Empresa</a></li> -->
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login <span class="fa fa-user "></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
+                      <li><a href="login_cliente.html">Particular</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
+                      <li><a href="login_empresa.html">Empresa</a></li>
+                      <!-- <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li> -->
                     </ul>
                   </li>
                 </ul>
@@ -81,36 +68,18 @@
     </div><!-- /.col -->
   </div><!-- /.row -->
 
-  <!-- Arbol de navegacion
-    <div class="row">
-      <div class="col-xs-12 col-md-12 col-lg-12 noPaddingDirectorio">
-        <ol class="breadcrumb panelLogin">
-          <li class="glyphicon glyphicon-home"><a href="../index.html">  Inicio</a></li>
-          <li class="active"><a href="#">Empresa</a></li>
-        </ol>
-      </div>
-    </div>
-  -->
-
-    <!-- Logotipo
-    <div class="jumbotron">
-      <p class="colorTitulo text-left">MASTER CHEQUE</p>
-        <hr>
-    </div>
-    -->
-
 
   <div class="container-welcome">
     <div class="row">
       <div class="col-xs-12 col-lg-8">
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title text-center">Bienvenido al área de cliente</h3>
+            <h3 class="panel-title text-center">Bienvenido al área de Empresa</h3>
           </div>
 
           <div class="panel-body">
             <h5 class="text-center">Iniciar sesion</h5>
-            <form method="post" action="ficha_empresa.html" name="form">
+            <form method="post" action="ficha_empresa.php" name="form">
 
               <div class="input-group ajusteLateral">
                 <input id="email" name="email" type="email" placeholder="email" class="form-control inputForm"
@@ -125,30 +94,18 @@
                 <a id="btnAlta" class="btn btn-primary" role="button" href="alta_empresa.php">Alta nueva</a>
                 <a id="btnOlvido" class="btn btn-primary" role="button" href="forgotten_empresa.php">¿Has olvidado tu contraseña?</a>
               </div>
-              <!--
-                    <a href="ficha_cliente.html">
-                        <div class="btn btn-primary">Acceder</div>
-                    </a>
-
-
-                    <a href="alta_cliente.php">
-                        <div id="btn2 btn-primary">Alta nueva</div>
-                    </a><br>
-
-                    -->
             </form>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/login_empresa.js"></script>
+  <script src="../js/jquery-3.2.1.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/login_empresa.js"></script>
 
 </body>
 
