--- a/index.html
+++ b/index.html
@@ -39,44 +39,22 @@
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Nose <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">Nose</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">One more separated link</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <!--
-                <form class="navbar-form navbar-left">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                  </div>
-                  <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-              -->
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="html/login_cliente.html">Particular</a></li>
-                  <li><a href="html/login_empresa.html">Empresa</a></li>
+                  <!-- <li><a href="html/login_cliente.html">Particular</a></li>
+                  <li><a href="html/login_empresa.html">Empresa</a></li> -->
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login <span class="fa fa-user "></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
+                      <li><a href="html/login_cliente.html">Particular<span class="fa fa-sign-in"></span></a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
+                      <li><a href="html/login_empresa.html">Empresa<span class="fa fa-sign-in"></span></a></li>
+                      <!-- <li><a href="#">Something else here</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="#">Separated link</a></li> -->
                     </ul>
                   </li>
                 </ul>
+
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </div><!-- /.nav-inverse -->
@@ -158,7 +136,7 @@
                       <div class="input-group">
                         <div class="input-group-btn">
                           <button class="btn btn-primary etiquetaLupa" href="#" role="button">
-                          Busqueda azanzada
+                          Busqueda avanzada
                         </button>
                         </div>
                         <div id="btnBusquedaAvanzada" class="input-group-btn">
