--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -8,15 +8,11 @@
 
   <title>Login cliente</title>
 
-  <!-- Bootstrap -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <!-- Styles -->
-  <link rel="stylesheet" href="../css/general.css">
   <link rel="stylesheet" href="../css/login_cliente.css">
+  <link rel="stylesheet" href="../css/general.css">
   <!-- To insert the icon: -->
   <link type="text/css" rel="stylesheet" href="../font-awesome/css/font-awesome.css" />
-
-
 
 </head>
 
@@ -41,7 +37,7 @@
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <!--
+                <!--
                 <form class="navbar-form navbar-left">
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
@@ -55,16 +51,16 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login <span class="fa fa-user "></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="login_cliente.html">Particular<span class="fa fa-sign-in"></span></a></li>
+                      <li><a href="login_cliente.html">Particular</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="login_empresa.html">Empresa<span class="fa fa-sign-in"></span></a></li>
+                      <li><a href="login_empresa.html">Empresa</a></li>
                       <!-- <li><a href="#">Something else here</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="#">Separated link</a></li> -->
                     </ul>
                   </li>
                 </ul>
-              </div> <!-- /.navbar-collapse -->
+              </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </div><!-- /.nav-inverse -->
         </div><!-- /.container-fluid -->
@@ -94,7 +90,7 @@
               </div>
 
               <div class="input-group-btn ajusteLateral separacionTop">
-                <input id="btnAcceder" type="submit" value="Acceder" class="btn btn-primary">
+                <button id="btnAcceder" name="enviar" type="submit" class="btn btn-primary">Acceder</button>
                 <a id="btnAlta" class="btn btn-primary" role="button" href="alta_cliente.php">Alta nueva</a>
                 <a id="btnOlvido" class="btn btn-primary" role="button" href="forgotten_cliente.php">¿Has olvidado tu contraseña?</a>
               </div>
@@ -106,14 +102,10 @@
   </div>
 
 
-
-
-
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="../js/jquery-3.2.1.min.js"></script>
   <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/login_cliente.js"></script>
-  <script src="../js/campos_vacios.js"></script>
+  <script src="../js/login_empresa.js"></script>
 
 </body>
 
