--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -82,10 +82,10 @@
             <form method="post" action="ficha_empresa.php" name="form">
 
               <div class="input-group ajusteLateral">
-                <input id="email" name="email" type="email" placeholder="email" class="form-control inputForm"
+                <input id="email" name="email" type="email" placeholder="Introduzca su email" class="form-control inputForm"
                       onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
 
-                <input id="password" name="contra" type="password" placeholder="Contraseña" class="form-control inputForm"
+                <input id="password" name="contra" type="password" placeholder="Introduzca su contraseña" class="form-control inputForm"
                        onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
               </div>
 
