--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <!-- Idea de ofertas diarias con paginacion -->
 <html lang="en">
@@ -200,6 +202,11 @@
                 <div class="col-xs-6 col-md-3">
                   <a href="#" class="thumbnail">
                     <img src="imagenes/pataNegra.jpg" alt="Bar Pata Negra">
+                  </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a href="#" class="thumbnail">
+                    <img src="imagenes/pataNegra.jpg" alt="Bar Naru">
                   </a>
                 </div>
                 <div class="col-xs-6 col-md-3">
