--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -102,7 +102,7 @@
         <div class="wrapper">
           <div class="index-busc-cab-alta">
             <h3 class="titulo-busqueda">Resgístrate</h3>
-            <form method="post" action="alta_cliente.php" name="form">
+            <form method="post" action="inserccion_cliente.php" name="form">
               <div class="row">
                 <div class="col-xs-12 col-lg-4">
                 <div class="index-busc-cab-formulario-datosAcceso">
@@ -123,7 +123,7 @@
                 </div>
               <div class="row">
                   <div class="input-group-btn ajusteLateralRegistro separacionTop">
-                    <a id="btnAlta" class="btn btn-primary" role="button" href="alta_cliente.php">Alta nueva</a>
+                    <input type="submit" name="alta" value="Alta nueva" id="btnAlta" class="btn btn-primary"/>
                   </div>
               </div>
                 </div>
