--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                <a class="navbar-brand" href="../index.html">MASTERCHECK</a>
+                <a class="navbar-brand" href="../index.php">MASTERCHECK</a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
