Errores y ficha/ajustes empresa hechos

--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -77,7 +77,7 @@
           <div class="wrapper">
             <div class="index-busc-cab-registro">
               <h3 class="titulo-busqueda">Inicio sesion</h3>
-                <form method="post" action="ficha_empresa.php" name="form">
+                <form method="post" action="empresa.php" name="form">
 
                   <div class="input-group ajusteLateralInicio">
                     <input id="email" name="email" type="email" placeholder="Introduzca su email" class="form-control inputForm"
