estilos y cambio a flexbox

--- a/html/login_empresa.html
+++ b/html/login_empresa.html
@@ -87,7 +87,7 @@
                            onfocus="field_focus(this, 'email');" onblur="field_blur(this, 'email');" />
                   </div>
 
-              <div class="input-group-btn ajusteLateral separacionTop">
+              <div class="input-group-btn separacionTop">
                 <input id="btnAcceder" name="enviar" value="Acceder" type="submit" class="btn btn-primary">Acceder
                 <a id="btnOlvido" class="btn btn-primary" role="button" href="forgotten_empresa.php">¿Has olvidado tu contraseña?</a>
               </div>
