--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -116,8 +116,8 @@
                 <div class="index-busc-cab-formulario-datosContacto">
                   <h5 class="titulo-busqueda">Datos de Contacto</h5>
                   <input id="nombre" type="text" name="name" class="form-control inputForm" placeholder="Nombre*" required />
-                  <input id="firstapel" type="text" name="surname" class="form-control inputForm" placeholder="1er Apellido*" required />
-                  <input id="secapel" type="text" name="secondname" class="form-control inputForm" placeholder="2º Apellido" />
+                  <input id="firstapel" type="text" name="surname" class="form-control inputForm" placeholder="Primer Apellido*" required />
+                  <input id="secapel" type="text" name="secondname" class="form-control inputForm" placeholder="Segundo Apellido" />
                   <input id="town" type="text" name="town" class="form-control inputForm" placeholder="Poblacion" />
                   <input id="movil" type="text" name="tel" class="form-control inputForm" placeholder="Movil" />
                 </div>
