--- a/html/login_cliente.html
+++ b/html/login_cliente.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/login_cliente.css">
   <link rel="stylesheet" href="../css/general.css">
+  <link rel="stylesheet" href="../css/sweetalert.css">
   <!-- To insert the icon: -->
   <link type="text/css" rel="stylesheet" href="../font-awesome/css/font-awesome.css" />
 
@@ -142,6 +143,7 @@
   <script src="../js/jquery-3.2.1.min.js"></script>
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/login_empresa.js"></script>
+  <script src="../js/sweetalert.min.js"></script
 
 </body>
 
